# Casusal-ops-metadata

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.claude/: settings.json
apps/api/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/src/: context.ts  logger.ts  server.ts  trpc.ts
apps/mcp/: mcp.config.json  package.json  tsconfig.tsbuildinfo
apps/mcp/src/: apiClient.ts  server.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: BlastRadiusMap.tsx  CandidateRanking.tsx  CausalGraph.tsx  ConfidenceBadge.tsx  EvidencePanel.tsx  FailureList.tsx  RiskBarChart.tsx  Sidebar.tsx  Stat.tsx  TimelineScrubber.tsx  TopBar.tsx
apps/web/lib/: format.ts  (+1 more)
causalops/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
docs/: AI-VIDEO-PRODUCTION.md  END-TO-END-DEMO.md  SUBMISSION.md  architecture.md  backtest-report.md  demo-recording.md  demo-script.md  theory.md  video-demo-final.md  voiceover-script.txt
docs/screenshots/: README.md
scripts/: backtest.ts  demo-seed-timescale.ts  inject-incidents.ts  seed-om.ts  tsconfig.json
scripts/lib/: fixtures.ts
services/causal-worker/: Dockerfile  README.md  pyproject.toml
services/causal-worker/src/: counterfactual.py  data_loader.py  db.py  intervention.py  main.py  models.py  refutation.py  scm_fit.py
services/causal-worker/tests/: test_counterfactual.py
(+33 files in other folders)
