[project]
name = "causalops-causal-worker"
version = "0.1.0"
description = "CausalOps causal-inference worker (SCM fit + counterfactual + intervention)"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "asyncpg>=0.30,<0.31",
  "pydantic>=2.9,<3",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "networkx>=3.3,<4",
  "scikit-learn>=1.5,<2",
  "dowhy>=0.11,<0.13",
  "econml>=0.15,<0.17",
  "causal-learn>=0.1.3,<0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
